--- a/app/src/main/res/layout/fragment_edit_student_info.xml
+++ b/app/src/main/res/layout/fragment_edit_student_info.xml
@@ -1,62 +1,170 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.tutoringproject.EditStudentInfoFragment">
+    android:background="@drawable/background"
+    tools:context="com.example.tutoringproject.EditTutorInfoFragment">
+    <ImageView
 
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/logo2"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/image"></ImageView>
+    <TextView
+        android:layout_marginStart="20dp"
+
+        android:id="@+id/UsernameIn"
+        android:layout_below="@+id/image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Username:"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:fontFamily="sans-serif"
+        ></TextView>
     <EditText
+        android:layout_marginStart="20dp"
+
+        android:layout_below="@+id/UsernameIn"
         android:id="@+id/UserName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="Username" />
+        android:textAlignment="center" />
+    <TextView
+        android:layout_marginStart="20dp"
 
+        android:id="@+id/password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Password:"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:fontFamily="sans-serif"
+        android:layout_below="@+id/UserName"
+        ></TextView>
     <EditText
+        android:layout_marginStart="20dp"
+
         android:id="@+id/PASSWORD"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="PASSWORD" />
+        android:layout_below="@+id/password"
+        android:textAlignment="center" />
 
+    <TextView
+
+        android:layout_marginStart="20dp"
+
+        android:id="@+id/fname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="First Name:"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:fontFamily="sans-serif"
+        android:layout_below="@+id/PASSWORD"
+        ></TextView>
     <EditText
+        android:layout_marginStart="20dp"
+
         android:id="@+id/FIRSTNAME"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="FIRSTNAME" />
+        android:layout_below="@+id/fname"
+        android:textAlignment="center" />
 
+    <TextView
+        android:layout_marginStart="20dp"
+
+        android:id="@+id/lname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Last Name:"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:fontFamily="sans-serif"
+        android:layout_below="@+id/FIRSTNAME"
+        ></TextView>
     <EditText
+        android:layout_marginStart="20dp"
+
         android:id="@+id/LASTNAME"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="LASTNAME" />
+        android:layout_below="@+id/lname"
+        android:textAlignment="center" />
 
+    <TextView
+        android:layout_marginStart="20dp"
+
+        android:id="@+id/level"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Level:"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:fontFamily="sans-serif"
+        android:layout_below="@+id/LASTNAME"
+        ></TextView>
     <EditText
+        android:layout_marginStart="20dp"
+
         android:id="@+id/LEVEL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="LEVEL" />
+        android:layout_below="@+id/level"
+        android:textAlignment="center" />
 
+    <TextView
+        android:layout_marginStart="20dp"
+
+        android:id="@+id/pn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Phone Number:"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:fontFamily="sans-serif"
+        android:layout_below="@+id/LEVEL"
+        ></TextView>
     <EditText
+        android:layout_marginStart="20dp"
+
         android:id="@+id/PHONENUMBER"
+        android:layout_below="@+id/pn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="PHONENUMBER"
-        android:inputType="number"/>
+        android:inputType="number"
+        android:textAlignment="center" />
+    <TextView
+        android:layout_marginStart="20dp"
+
+        android:id="@+id/addr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Address:"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:fontFamily="sans-serif"
+        android:layout_below="@+id/PHONENUMBER"
+        ></TextView>
     <EditText
+        android:layout_marginStart="20dp"
+
+        android:layout_below="@+id/addr"
         android:id="@+id/ADDRESS"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="ADDRESS" />
+        android:textAlignment="center" />
+
     <Button
+        android:layout_marginStart="20dp"
+
+        android:id="@+id/Submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save Changes"
-        android:id="@+id/Submit"/>
-
-</LinearLayout>
+        android:layout_below="@+id/ADDRESS"/>
+</RelativeLayout>
