--- a/app/src/main/res/layout/fragment_view_tutor.xml
+++ b/app/src/main/res/layout/fragment_view_tutor.xml
@@ -8,6 +8,8 @@
     <!-- TODO: Update blank fragment layout -->
 
     <TextView
+        android:textColor="@color/black"
+        android:fontFamily="sans-serif"
         android:id="@+id/Name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,21 +17,28 @@
         android:layout_centerHorizontal="true"
         android:text="Name"
         android:layout_marginTop="50dp"
+        android:layout_margin="20dp"
+        android:textStyle="bold"
         android:textAlignment="center"
-        android:textSize="35dp" />
+        android:textSize="35sp" />
 
     <TextView
+        android:textSize="25sp"
+        android:textColor="@color/black"
         android:id="@+id/UserName"
         android:layout_width="match_parent"
         android:textAlignment="center"
+        android:layout_margin="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:layout_height="wrap_content"
         android:layout_above="@+id/ProfilePic"
         android:layout_centerHorizontal="true"
-        android:text="Username" />
+        android:text="Username"
+        android:fontFamily="sans-serif-light"/>
     <ImageView
         android:id="@+id/ProfilePic"
+        android:layout_margin="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -41,22 +50,28 @@
 
     <TextView
         android:id="@+id/PhoneNumber"
+        android:layout_margin="20dp"
+        android:fontFamily="sans-serif-light"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:layout_marginTop="10dp"
         android:text="Number"
-        android:textSize="18dp"/>
+        android:textColor="@color/black"
+
+        android:textSize="25sp"/>
 
     <TextView
+        android:layout_margin="40dp"
         android:id="@+id/Address"
-        android:textAlignment="center"
-        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/PhoneNumber"
+        android:fontFamily="sans-serif-light"
         android:text="Address"
-        android:textSize="18dp" />
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="25sp" />
 
     <TextView
         android:id="@+id/Courses"
