--- a/app/src/main/res/layout/fragment_view_student_profile.xml
+++ b/app/src/main/res/layout/fragment_view_student_profile.xml
@@ -3,11 +3,13 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context="com.example.tutoringproject.ViewStudentFragment">
+    tools:context="com.example.tutoringproject.ViewTutorFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
     <TextView
+        android:textColor="@color/black"
+        android:fontFamily="sans-serif"
         android:id="@+id/Name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,21 +17,28 @@
         android:layout_centerHorizontal="true"
         android:text="Name"
         android:layout_marginTop="50dp"
+        android:layout_margin="20dp"
+        android:textStyle="bold"
         android:textAlignment="center"
-        android:textSize="35dp" />
+        android:textSize="35sp" />
 
     <TextView
+        android:textSize="25sp"
+        android:textColor="@color/black"
         android:id="@+id/UserName"
         android:layout_width="match_parent"
         android:textAlignment="center"
+        android:layout_margin="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:layout_height="wrap_content"
         android:layout_above="@+id/ProfilePic"
         android:layout_centerHorizontal="true"
-        android:text="Username" />
+        android:text="Username"
+        android:fontFamily="sans-serif-light"/>
     <ImageView
         android:id="@+id/ProfilePic"
+        android:layout_margin="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -37,32 +46,44 @@
         android:maxHeight="40dp"
         android:src="@drawable/tutordefault" />
 
+
+
     <TextView
         android:id="@+id/PhoneNumber"
+        android:layout_margin="20dp"
+        android:fontFamily="sans-serif-light"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:layout_marginTop="10dp"
         android:text="Number"
-        android:textSize="18dp"/>
+        android:textColor="@color/black"
+
+        android:textSize="20sp"/>
 
     <TextView
+        android:layout_margin="40dp"
         android:id="@+id/Address"
-        android:textAlignment="center"
-        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/PhoneNumber"
+        android:fontFamily="sans-serif-light"
         android:text="Address"
-        android:textSize="18dp" />
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/Courses"
+        android:id="@+id/Level"
+        android:text="Courses"
         android:textAlignment="center"
+        android:textColor="@color/black"
+        android:fontFamily="sans-serif-light"
+        android:layout_margin="20dp"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="12dp"
+        android:textSize="20sp"
         android:layout_below="@+id/PhoneNumber"
         android:layout_centerHorizontal="true" />
 
