--- a/app/src/main/res/layout/fragment_view_tutor.xml
+++ b/app/src/main/res/layout/fragment_view_tutor.xml
@@ -59,7 +59,7 @@
         android:text="Number"
         android:textColor="@color/black"
 
-        android:textSize="25sp"/>
+        android:textSize="20sp"/>
 
     <TextView
         android:layout_margin="40dp"
@@ -71,15 +71,20 @@
         android:text="Address"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="25sp" />
+        android:textSize="20sp" />
 
     <TextView
+        android:text="Courses"
+
+        android:textColor="@color/black"
+        android:fontFamily="sans-serif-light"
         android:id="@+id/Courses"
+        android:layout_margin="20dp"
         android:textAlignment="center"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="12dp"
+        android:textSize="20sp"
         android:layout_below="@+id/PhoneNumber"
         android:layout_centerHorizontal="true" />
 
