Fixed Several bugs

--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -3,66 +3,74 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="400dp"
-    android:layout_height="300dp"
+    android:layout_height="280dp"
     android:layout_gravity="center"
-    card_view:cardCornerRadius="4dp"
-    >
+    android:layout_marginBottom="20dp"
+    card_view:cardCornerRadius="4dp">
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" android:background="@drawable/background">
+        android:layout_height="match_parent"
+        android:background="@drawable/background">
 
 
         <TextView
+            android:id="@+id/Subject"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+
             android:layout_marginStart="20dp"
             android:layout_marginBottom="20dp"
-                android:id="@+id/Subject"
-            android:textStyle="bold"
-
             android:fontFamily="sans-serif"
             android:text="Subject"
             android:textColor="@color/black"
             android:textSize="30sp"
-            android:layout_centerHorizontal="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        <TextView
+            android:textStyle="bold" />
 
-            android:id="@+id/Date"
-            android:layout_marginBottom="20dp"
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_below="@+id/Subject"
-            android:fontFamily="sans-serif"
-            android:text="Date"
-            android:textColor="@color/black"
-            android:textSize="30sp" />
-
-        <TextView
-            android:id="@+id/Time"
-            android:layout_width="wrap_content"
-
+        <LinearLayout
+            android:id="@+id/container"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/Subject"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="225dp"
-            android:layout_marginTop="4dp"
-            android:layout_toRightOf="@+id/Date"
-            android:fontFamily="sans-serif"
-            android:text="Time"
-            android:textColor="@color/black"
-            android:textSize="30sp" />
+            android:layout_marginTop="20dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/Time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/Subject"
+                android:layout_toRightOf="@+id/Date"
+                android:layout_weight="1"
+                android:fontFamily="sans-serif"
+                android:text="Time"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/Date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/Subject"
+                android:layout_weight="1"
+                android:fontFamily="sans-serif"
+                android:text="Date"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
+
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/StudentID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/Time"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="119dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_below="@+id/container"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
             android:fontFamily="sans-serif"
             android:text="Reserved By:"
             android:textColor="@color/black"
