--- a/app/src/main/res/layout/cardview_tutor.xml
+++ b/app/src/main/res/layout/cardview_tutor.xml
@@ -3,80 +3,71 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="400dp"
-    android:layout_height="280dp"
+    android:layout_height="240dp"
     android:layout_gravity="center"
-    card_view:cardCornerRadius="4dp" android:layout_marginBottom="20dp" >
+    android:layout_marginBottom="20dp"
+    card_view:cardCornerRadius="4dp">
 
     <LinearLayout
-        android:background="@drawable/background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
-            <TextView
-                android:layout_width="match_parent"
-android:layout_marginBottom="20dp"
-                android:textAlignment="center"
-                android:id="@+id/UserName"
-                android:text="Username"
-android:textColor="@color/black"
-                android:textSize="20sp"
-                android:fontFamily="sans-serif"
-                android:layout_height="wrap_content" />
+        android:background="@drawable/background"
+        android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_marginBottom="20dp"
-                android:textAlignment="center"
-                android:text="First Name"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:fontFamily="sans-serif"
-                android:id="@+id/FirstName"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_marginBottom="20dp"
-                android:textAlignment="center"
-                android:text="Last Name"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:fontFamily="sans-serif"
-                android:id="@+id/lastName"
-                android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/UserName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="sans-serif"
+            android:text="Username"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_marginBottom="20dp"
-                android:textAlignment="center"
-                android:text="Phone Number"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:fontFamily="sans-serif"
-                android:id="@+id/PhoneNumber"
-                android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/Name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="sans-serif"
+            android:text="First Name"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_marginBottom="20dp"
-                android:textAlignment="center"
-                android:text="Address"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:fontFamily="sans-serif"
-                android:id="@+id/Address"
-                android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/PhoneNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="sans-serif"
+            android:text="Phone Number"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_marginBottom="20dp"
-                android:textAlignment="center"
-                android:text="Courses"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:fontFamily="sans-serif"
-                android:id="@+id/Courses"
-                android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/Address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="sans-serif"
+            android:text="Address"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/Courses"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="sans-serif"
+            android:text="Courses"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
